# sprenity

./: .gitignore  CLAUDE.md  HANDOFF.md  pyproject.toml
.claude/commands/: dev-docs.md  dev-implement.md
.claude/skills/: README.md
.github/workflows/: backend.yml  ui.yml
src/sprenity/client/: index.html  main.py  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/sprenity/client/electron/: preload.cjs
src/sprenity/client/src/: app.tsx  index.css  main.tsx
src/sprenity/client/src/core/hooks/: use-animations.ts  use-character-model.ts
src/sprenity/client/src/core/store/: game-store.ts  interaction-store.ts
src/sprenity/client/src/e2e/: test-api.ts
src/sprenity/client/src/entities/: agent.tsx
src/sprenity/client/src/systems/selection/: box-selection.tsx
src/sprenity/client/src/systems/world/: clickable-ground.tsx  infinite-grid.tsx  zoom-clamp.tsx
src/sprenity/client/src/systems/zones/: index.ts  zone-builder.tsx  zone-hover-trail.tsx  zone-mesh.tsx  zone-outline.tsx  zone-preview.tsx  zone-utils.ts  zones.tsx
src/sprenity/client/src/types/: e2e.d.ts
src/sprenity/client/src/ui/: three-view-registry.tsx
src/sprenity/client/src/ui/controls/: index.ts  mode-toggle.tsx  zone-build-notification.tsx
src/sprenity/client/src/ui/icons/: base.tsx  icon-chevron-down.tsx  icon-close.tsx  icon-edit-pencil.tsx  icon-trash.tsx  index.ts
src/sprenity/client/src/ui/modals/: configure-agent.tsx  edit-zone-project.tsx  index.ts  modal-provider.tsx
src/sprenity/client/src/ui/previews/: agent-preview.tsx
src/sprenity/client/src/ui/text/: text.tsx
src/sprenity/client/tests/helpers/: sprenity-ui.ts
src/sprenity/client/tests/ui/: configure-agent-modal.spec.ts  interaction-locking.spec.ts  selection-and-move.spec.ts  zone-building.spec.ts
src/sprenity/server/: main.py  pyproject.toml
src/sprenity/web/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/sprenity/web/electron/: main.cjs
src/sprenity/web/src/: Agent.tsx  App.tsx  BoxSelection.tsx  Ranger.tsx  box-selection.tsx  index.css
src/sprenity/web/src/components/: agent-preview.tsx
src/sprenity/web/src/entities/: agent.tsx
src/sprenity/web/src/hooks/: index.ts  use-cloned-model.ts  useClonedModel.ts
src/sprenity/web/src/modals/: configure-agent.tsx  index.ts  modal-provider.tsx
src/sprenity/web/src/store/: game-store.tsx
src/sprenity/web/src/systems/world/: index.ts  (+1 more)
(+1 files in other folders)
